# lz4-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  aliases.js  appveyor.yml  index.html  rustdoc.sh  search-index.js  settings.html  source-files.js
liblz4/lib/: lz4frame.c  lz4frame_static.h
lz4/: all.html  enum.BlockMode.html  enum.BlockSize.html  enum.ContentChecksum.html  index.html  sidebar-items.js  struct.Decoder.html  struct.Encoder.html  struct.EncoderBuilder.html
lz4-sys/: CHANGELOG.md  Cargo.toml  build.rs
lz4-sys/src/: lib.rs
lz4/block/: enum.CompressionMode.html  fn.compress.html  fn.decompress.html  index.html
lz4/liblz4/: constant.LZ4F_VERSION.html  enum.BlockMode.html  enum.BlockSize.html  enum.ContentChecksum.html  fn.LZ4F_compressBegin.html  fn.LZ4F_compressBound.html  fn.LZ4F_compressEnd.html  fn.LZ4F_compressUpdate.html  fn.LZ4F_createCompressionContext.html  fn.LZ4F_createDecompressionContext.html  fn.LZ4F_decompress.html  fn.LZ4F_flush.html  fn.LZ4F_freeCompressionContext.html  fn.LZ4F_freeDecompressionContext.html  fn.LZ4F_getErrorName.html  fn.LZ4F_getFrameInfo.html  fn.LZ4F_isError.html  fn.LZ4_compressBound.html  fn.LZ4_compress_HC.html  fn.LZ4_compress_continue.html  fn.LZ4_compress_default.html  fn.LZ4_compress_fast.html  fn.LZ4_createStream.html  fn.LZ4_createStreamDecode.html  fn.LZ4_decompress_safe.html  fn.LZ4_decompress_safe_continue.html  fn.LZ4_freeStream.html  fn.LZ4_freeStreamDecode.html  fn.LZ4_versionNumber.html  fn.check_error.html  fn.version.html  index.html  struct.LZ4Error.html  struct.LZ4FCompressOptions.html  (+8 more)
lz4_sys/: all.html  constant.LZ4F_VERSION.html  enum.BlockMode.html  enum.BlockSize.html  enum.ContentChecksum.html  fn.LZ4F_compressBegin.html  fn.LZ4F_compressBound.html  fn.LZ4F_compressEnd.html  fn.LZ4F_compressUpdate.html  fn.LZ4F_createCompressionContext.html  fn.LZ4F_createDecompressionContext.html  fn.LZ4F_decompress.html  fn.LZ4F_flush.html  fn.LZ4F_freeCompressionContext.html  fn.LZ4F_freeDecompressionContext.html  fn.LZ4F_getErrorName.html  fn.LZ4F_getFrameInfo.html  fn.LZ4F_isError.html  fn.LZ4_compressBound.html  fn.LZ4_compress_HC.html  fn.LZ4_compress_continue.html  fn.LZ4_compress_default.html  fn.LZ4_compress_fast.html  fn.LZ4_createStream.html  fn.LZ4_createStreamDecode.html  fn.LZ4_decompress_safe.html  fn.LZ4_decompress_safe_continue.html  fn.LZ4_freeStream.html  fn.LZ4_freeStreamDecode.html  fn.LZ4_versionNumber.html  index.html  struct.LZ4FCompressOptions.html  struct.LZ4FCompressionContext.html  struct.LZ4FDecompressOptions.html  struct.LZ4FDecompressionContext.html  struct.LZ4FFrameInfo.html  struct.LZ4FPreferences.html  struct.LZ4StreamDecode.html  struct.LZ4StreamEncode.html  type.LZ4FErrorCode.html
src/: build.rs  decoder.rs  encoder.rs  lib.rs  liblz4.rs
(+20 files in other folders)
