[package]
name = "lz4"
license = "MIT"
version = "1.23.0"
readme = "README.md"
authors = [ "Jens Heyens <jens.heyens@ewetel.net>", "Artem V. Navrotskiy <bozaro@buzzsoft.ru>" ]
build = "build.rs"
description = "Rust LZ4 bindings library."
repository = "https://github.com/bozaro/lz4-rs"
documentation = "https://bozaro.github.io/lz4-rs/lz4/"

[[bin]]
name = "lz4"
test = false
doc = false

[dependencies]
libc = "0.2.39"
lz4-sys = { path = "lz4-sys", version = "1.8.0" }

[dev-dependencies]
rand = "0.4"
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"
