[package]
name = "lz4"
license = "MIT"
version = "1.23.1"
readme = "README.md"
authors = [ "Jens Heyens <jens.heyens@ewetel.net>", "Artem V. Navrotskiy <bozaro@buzzsoft.ru>" ]
description = "Rust LZ4 bindings library."
repository = "https://github.com/bozaro/lz4-rs"
documentation = "https://bozaro.github.io/lz4-rs/lz4/"

[[bin]]
name = "lz4"
test = false
doc = false

[dependencies]
libc = "0.2.44"
lz4-sys = { path = "lz4-sys", version = "1.8.3" }

[dev-dependencies]
rand = "0.6.1"
docmatic = "0.1"
