[package]
name = "lz4-sys"
license = "MIT"
links = "lz4"
version = "1.8.2"
authors = [ "Jens Heyens <jens.heyens@ewetel.net", "Artem V. Navrotskiy <bozaro@buzzsoft.ru>" ]
build = "build.rs"
description = "Rust LZ4 sys package."
repository = "https://github.com/bozaro/lz4-rs"

[dependencies]
libc = "0.2.43"

[build-dependencies]
cc = "1.0.24"
