[package]
name = "lz4-sys"
license = "MIT"
links = "lz4"
version = "1.8.3"
authors = [ "Jens Heyens <jens.heyens@ewetel.net", "Artem V. Navrotskiy <bozaro@buzzsoft.ru>" ]
build = "build.rs"
description = "Rust LZ4 sys package."
repository = "https://github.com/bozaro/lz4-rs"

[dependencies]
libc = "0.2.44"

[build-dependencies]
cc = "1.0.25"
pkg-config = "0.3.14"
